# pdf-md-translate

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
md_translator/: __init__.py  config.py  convert_to_pdf.py  default.css  main.py
