[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-md-translate"
version = "0.1.2"
description = "使用 LLM 自動翻譯 PDF 與 Markdown 論文"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Bruce762", email = "a0909861061@gmail.com"}
]
keywords = ["pdf", "markdown", "translation", "llm", "openai", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openai",
    "google-genai",
    "tqdm",
    "mineru[all]"
]


[project.scripts]
md-translate = "md_translator.main:main"

[project.urls]
Homepage = "https://github.com/Bruce762/pdf-md-translate"
Documentation = "https://github.com/Bruce762/pdf-md-translate#readme"
Repository = "https://github.com/Bruce762/pdf-md-translate.git"
